--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,21 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="margin_layout_menu">5dp</dimen>
+    <dimen name="bar_height">40dp</dimen>
+    <dimen name="bar_padding">8dp</dimen>
+    <dimen name="image_size">200dp</dimen>
+    <dimen name="text_size_tittle">20dp</dimen>
+    <dimen name="text_size_button">14dp</dimen>
+    <dimen name="corners_button">4dp</dimen>
+    <dimen name="elevation_button">6dp</dimen>
+    <dimen name="pressed_button">2dp</dimen>
+    <dimen name="margin_button_bottom">15dp</dimen>
+    <dimen name="margin_button_top">15dp</dimen>
+    <dimen name="text_size_level">10dp</dimen>
+    <dimen name="size_top_panel">52dp</dimen>
+    <dimen name="size_button_height">35dp</dimen>
+    <dimen name="size_piano">300dp</dimen>
+    <dimen name="margin_top_piano">30dp</dimen>
 </resources>
